--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -47,24 +47,43 @@
   justify-content: flex-end !important;
   align-content: center;
 }
-.nav__label, .nav__check {
+.nav__label, .nav__img {
   text-decoration: none;
-  margin: auto;
-  padding-right: 5%;
+  margin-top: 1.3rem;
+  padding-right: 10px;
   float: right;
   right: 0;
   top: 0;
-  width: 1em;
+  width: 2em;
   visibility: hidden;
-  border: solid 2px black;
+  cursor: pointer;
+}
+.nav__check {
+  text-decoration: none;
+  margin-top: 1.6rem;
+  margin-right: 1.3%;
+  padding-right: 10px;
+  float: right;
+  right: 0;
+  top: 0;
+  width: 35px;
+  height: 1.8em;
+  visibility: hidden;
+  cursor: pointer;
+  appearance: none;
+  border-radius: 5px;
+}
+.nav__check:active {
+  box-shadow: 1px 1px 6px 0.5px;
 }
 input[type=checkbox]:checked + .nav__ul {
   display: grid;
   background-color: rgba(0, 153, 255, 0.85);
   justify-content: center;
+  transition-duration: 3.2s;
 }
 @media (max-width: 615px) {
-  .nav__label, .nav__check {
+  .nav__label, .nav__img, .nav__check {
     visibility: visible;
     position: absolute;
   }
