--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -81,11 +81,13 @@ $colornegroTexto: rgb(0, 0, 0);
     appearance: none;
     border-radius: 5px;
   }
-  &__check:active{
+  &__check:active{  
     box-shadow: 1px 1px 6px 0.5px;
   }
   input[type='checkbox']:checked + &__ul {
     @include mixinFuncions.menuResponsive;
+    animation-duration: 1s ;
+  animation-name: toggleMenu;
   }
   //   Media query del check
   @media (max-width: 615px) {
@@ -95,7 +97,16 @@ $colornegroTexto: rgb(0, 0, 0);
       position: absolute;
     }
     &__ul {
-      display: none;
+      @include mixinFuncions.menuResponsiveOff;
     }
+  }
+}
+@keyframes toggleMenu {
+  from {
+    height: 30vh;
+  }
+
+  to {
+    height: 80vh;
   }
 }
