--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,4 +1,10 @@
+body {
+  width: 100%;
+  margin: 0 auto;
+}
+
 .nav {
+  top: -1%;
   position: sticky;
   background: rgba(0, 153, 255, 0.85);
   height: 4.5rem;
@@ -26,20 +32,22 @@
   padding: 0;
   margin: 0;
   top: 0;
+  padding-right: 20px;
 }
 .nav__itemlist {
   margin-top: 1.1rem;
   list-style: none;
   font-size: 1.6em;
-  margin-left: 1.5%;
+  margin-left: 1em;
 }
 .nav__itemref {
   text-decoration: none;
   color: rgb(220, 220, 220);
 }
 .nav__itemref:hover {
-  color: #fff;
-  transition: ease-out 1s;
+  color: rgb(255, 255, 255);
+  transition: ease-out 0.5s;
+  animation: slide_item 0.6s alternate-reverse infinite;
 }
 .nav__menu-right {
   display: flex;
@@ -55,7 +63,7 @@
   right: 0;
   top: 0;
   width: 2em;
-  visibility: hidden;
+  display: none;
   cursor: pointer;
 }
 .nav__check {
@@ -68,7 +76,7 @@
   top: 0;
   width: 35px;
   height: 1.8em;
-  visibility: hidden;
+  display: none;
   cursor: pointer;
   appearance: none;
   border-radius: 5px;
@@ -80,13 +88,14 @@ input[type=checkbox]:checked + .nav__ul {
   display: grid;
   background-color: rgba(0, 153, 255, 0.85);
   justify-content: center;
-  height: 80vh;
+  height: 60vh;
+  text-align: center;
   animation-duration: 1s;
   animation-name: toggleMenu;
 }
-@media (max-width: 615px) {
+@media (max-width: 670px) {
   .nav__label, .nav__img, .nav__check {
-    visibility: visible;
+    display: initial;
     position: absolute;
   }
   .nav__ul {
@@ -96,10 +105,20 @@ input[type=checkbox]:checked + .nav__ul {
 
 @keyframes toggleMenu {
   from {
-    height: 30vh;
+    height: 10vh;
   }
   to {
-    height: 80vh;
+    height: 60vh;
+  }
+}
+@keyframes slide_item {
+  0% {
+    text-decoration-color: white;
+    text-emphasis-position: under;
+  }
+  100% {
+    text-decoration: underline 10px;
+    text-decoration-color: white;
   }
 }
 * {
