--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -129,6 +129,33 @@ input[type=checkbox]:checked + .nav__ul {
     width: 100%;
   }
 }
+.container {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.img-thumbail {
+  width: 50%;
+}
+
+.mt-2 {
+  margin-top: 2%;
+}
+
+.mt-10 {
+  margin-top: 10%;
+}
+
+@media (max-width: 670px) {
+  .flex {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 * {
   font-family: Verdana, Arial, Helvetica, sans-serif;
 }
