--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -1,34 +1,125 @@
+//Variables
+$colorWhitetexto: rgb(220, 220, 220);
+
+
 .footer {
   width: 100vh;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   &__body {
-    position: absolute;
+    position: relative;
+    height: 10em;
     // margin-top: -5%;
     bottom: 0;
-    width: 95%;
-    margin: 0 auto;
-    background-color: rgba(0, 153, 255, 0.385);
+    width: 100%;
+    // margin: 0 auto;
+    background-color: rgba(0, 153, 255, 0.851);
   }
 }
-.custom-shape-divider-bottom-1668180242 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+// footer viejo
+// .custom-shape-divider-bottom-1668180242 {
+//   position: relative;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   overflow: hidden;
+//   line-height: 0;
+//   transform: rotate(180deg);
+// }
+
+// .custom-shape-divider-bottom-1668180242 svg {
+//   position: relative;
+//   display: block;
+//   width: calc(100% + 1.3px);
+//   height: 180px;
+// }
+
+// .custom-shape-divider-bottom-1668180242 .shape-fill {
+//   fill: #0099ffd9;
+// }
+// fin footer viejo
+
+h1 {
+  font-weight:300;
+  letter-spacing: 2px;
+  font-size:48px;
+}
+p {
+  letter-spacing: 1px;
+  font-size:14px;
+  color: #333333;
+}
+ 
+.inner-header {
+  height:65vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
+}
+
+.flex { /*Flexbox for containers*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.waves {
+  position:relative;
   width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
+  height:15vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
+  min-height:100px;
+  max-height:150px;
 }
 
-.custom-shape-divider-bottom-1668180242 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 180px;
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+  background-color: white;
 }
 
-.custom-shape-divider-bottom-1668180242 .shape-fill {
-  fill: #0099ffd9;
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
+  h1 {
+    font-size:24px;
+  }
 }
