--- a/src/assets/sass/_generalStyles.scss
+++ b/src/assets/sass/_generalStyles.scss
@@ -15,6 +15,14 @@
     margin-top: 10%;
 }
 
+
+.header {
+    text-align:center;
+  
+    color:white;
+  }
+  
+
 @media (max-width: 670px) {
     .flex{
         flex-wrap: wrap;
