--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,6 +1,12 @@
 @use "navbar";
 @use "generalStyles";
 @use "footer";
+@import url(//fonts.googleapis.com/css?family=Lato:300:400);
+
 * {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  // font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-family: 'Lato', sans-serif;
+}
+body{
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
 }
