--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -11,6 +11,7 @@ body {
 }
 
 .nav {
+  z-index: 1;
   top: -1%;
   position: sticky;
   background: $colorPrimario;
@@ -28,6 +29,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     img {
+      position: relative;
       width: 60px;
       //   margin-top: 10%;
     }
