animaciones e info personal

--- a/src/assets/sass/_mixinFuncions.scss
+++ b/src/assets/sass/_mixinFuncions.scss
@@ -15,3 +15,8 @@ $colorPrimario: rgba(0, 153, 255, 0.85);
   align-content: center;
   background-color: blue;
 }
+// @mixin flex-center {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: row;
+// }
