--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,6 +1,8 @@
 @use "navbar";
 @use "generalStyles";
 @use "footer";
+@use "about";
+@use "animations";
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 
 * {
