--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -3,6 +3,7 @@
 @use "footer";
 @use "about";
 @use "animations";
+@use "loading";
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 
 * {
