--- a/src/assets/sass/_mixinFuncions.scss
+++ b/src/assets/sass/_mixinFuncions.scss
@@ -22,30 +22,32 @@ $colorPrimario: rgba(0, 153, 255, 0.85);
 // }
 
 // Animación del circulo del loading
-@mixin Circulo{
+@mixin Circulo {
   @for $i from 1 through 5 {
-    .cir-#{$i}{
-      animation: circle-animated-#{$i} 1.5s alternate-reverse infinite;
-        @keyframes circle-animated-#{$i} {
-          0%{
-            transform: rotateX(45px/$i);
-          }
-          50%{
-              transform: translateY(-40px/$i);
-          }
-          90%{
-              transform: translateY(-24px/$i);
-          }
-          100%{
-            transform: translateY(-45px/$i);
-          }
+    .cir-#{$i} {
+      animation: circle-animated-#{$i} 1s alternate-reverse infinite;
+      @keyframes circle-animated-#{$i} {
+        100% {
+          transform: translateY(calc(-1px / $i));
         }
-        @if $i==1 {
-          transform: translateY(-45px/$i);
-        }
-        @if $i==5 {
-          transform: translateY(85px/$i);
-        }
+      }
+      @if $i==1 {
+        transform: translateY(calc(-33px / $i));
+        transform: translateX(calc(35px / $i));
+      }
+      @if $i==2 {
+        transform: translateY(calc(100px / $i));
+      }
+      @if $i==3 {
+        transform: translateY(calc(-130px / $i));
+      }
+      @if $i==4 {
+        transform: translateY(calc(47px / $i));
+        transform: translateX(calc(-115px / $i));
+      }
+      @if $i==5 {
+        transform: translateY(calc(200px / $i));
+      }
     }
   }
 }
