--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -4,6 +4,7 @@
 @use "about";
 @use "animations";
 @use "loading";
+@use 'WorkItemList';
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 
 * {
