--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -408,6 +408,38 @@ p {
   }
 }
 
+.list-card {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  margin: auto;
+  display: grid;
+  gap: 1.4em;
+  grid-row: 1;
+  grid-template-columns: repeat(1, 1fr);
+  border-radius: 10px;
+}
+.list-card_card {
+  margin: auto;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  border: 1px solid;
+}
+.list-card_description {
+  width: 100%;
+  word-wrap: break-word;
+}
+.list-card_img {
+  shape-outside: circle(50%);
+  width: 100px;
+  height: 100px;
+  float: left;
+}
+
 * {
   font-family: "Lato", sans-serif;
 }
