--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -409,7 +409,6 @@ p {
 }
 
 .list-card {
-  background-color: rgba(255, 255, 255, 0.5);
   width: 100%;
   margin: auto;
   display: grid;
@@ -420,26 +419,313 @@ p {
 }
 .list-card_card {
   margin: auto;
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 85%;
   justify-content: center;
   align-items: center;
   justify-items: center;
-  border: 1px solid;
+  border-radius: 10px;
+  background: #ffffff;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.223), -2px -2px 3px rgba(0, 0, 0, 0.223);
 }
 .list-card_description {
   width: 100%;
   word-wrap: break-word;
 }
+.list-card_img_container {
+  width: 100%;
+}
+.list-card_container {
+  width: 90%;
+}
 .list-card_img {
-  shape-outside: circle(50%);
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: auto;
   float: left;
 }
+.list-card_technologies {
+  height: 1.5rem;
+}
 
+@media (min-width: 570px) {
+  .list-card {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.4em;
+  }
+  .list-card_card {
+    width: 100%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: none;
+  }
+}
+@media (min-width: 600px) {
+  .list-card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .list-card_card {
+    width: 90%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: none;
+  }
+}
+@media (min-width: 671px) {
+  .list-card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .list-card_card {
+    width: 100%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: auto;
+  }
+}
+@media (min-width: 720px) {
+  .list-card {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
+  }
+  .list-card_card {
+    width: 100%;
+    height: 100%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: auto;
+  }
+}
+@media (min-width: 900px) {
+  .list-card {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
+  }
+  .list-card_card {
+    height: 100%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: auto;
+  }
+}
+@media (min-width: 1000px) {
+  .list-card {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.5rem;
+  }
+  .list-card_card {
+    height: 100%;
+  }
+  .list-card_img_container {
+    width: 100%;
+  }
+  .list-card_img {
+    height: 25vh;
+    float: left;
+  }
+  .list-card_technologies {
+    height: auto;
+  }
+}
+.form {
+  display: flex;
+  margin: 1em;
+}
+.form_group {
+  width: 10rem !important;
+}
+.form_label {
+  color: white;
+  font-size: 1.2rem;
+}
+.form_input {
+  margin-top: 5px;
+  width: 13rem;
+  padding: 1em;
+  border-radius: 8px;
+  border: 0px;
+  font-weight: 600;
+}
+.form_input:focus {
+  border: 3px solid rgba(8, 0, 255, 0.744);
+  transition: 0.5s;
+  width: 18em;
+  transform: translateX(20%);
+}
+.form_select {
+  margin-top: 5px;
+  width: 14.6rem;
+  padding: 1em;
+  border-radius: 8px;
+  border: 0px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.form_select:focus {
+  border: 3px solid rgba(8, 0, 255, 0.744);
+  transition: 0.5s;
+  width: 21em;
+  transform: translateX(20%);
+}
+.form_textarea {
+  width: 14.6rem;
+  right: 0;
+  height: 5rem;
+  border-radius: 8px;
+  border: 0px;
+  font-weight: 600;
+}
+.form_textarea:focus {
+  border: 3px solid rgba(8, 0, 255, 0.744);
+  transition: 0.5s;
+  width: 18em;
+  transform: translateX(20%);
+}
+.form_btn {
+  margin-top: 10px;
+  border-radius: 6px;
+  border: 0px;
+  padding: 10px;
+  width: 100%;
+  background-color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.5s;
+  font-weight: 600;
+}
+.form_btn:hover {
+  background-color: rgb(175, 172, 255);
+  color: #fff;
+}
+.form_btn:active {
+  background-color: rgb(0, 77, 184);
+  transition: all 0.5s;
+}
+
+@media (min-width: 500px) {
+  .form_input {
+    width: 20rem;
+  }
+  .form_input:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 25em;
+    transform: translateX(20%);
+  }
+  .form_select {
+    width: 22.6rem;
+    cursor: pointer;
+  }
+  .form_select:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 25em;
+    transform: translateX(20%);
+  }
+  .form_textarea {
+    width: 22.6rem;
+  }
+  .form_textarea:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 25em;
+    transform: translateX(20%);
+  }
+}
+@media (min-width: 760px) {
+  .form_input {
+    width: 32rem;
+  }
+  .form_input:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 36em;
+    transform: translateX(20%);
+  }
+  .form_select {
+    width: 33.6rem;
+    cursor: pointer;
+  }
+  .form_select:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 38em;
+    transform: translateX(20%);
+  }
+  .form_textarea {
+    width: 33.6rem;
+  }
+  .form_textarea:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 36em;
+    transform: translateX(20%);
+  }
+}
+@media (min-width: 900px) {
+  .form_input {
+    width: 33rem;
+  }
+  .form_input:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 40em;
+    transform: translateX(20%);
+  }
+  .form_select {
+    width: 34.6rem;
+    cursor: pointer;
+  }
+  .form_select:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 43em;
+    transform: translateX(20%);
+  }
+  .form_textarea {
+    width: 34.6rem;
+  }
+  .form_textarea:focus {
+    border: 3px solid rgba(8, 0, 255, 0.744);
+    transition: 0.5s;
+    width: 40em;
+    transform: translateX(20%);
+  }
+}
 * {
   font-family: "Lato", sans-serif;
 }
@@ -457,6 +743,18 @@ body::-webkit-scrollbar-track {
 }
 body::-webkit-scrollbar-thumb {
   background: rgba(20, 149, 255, 0.549);
+}
+
+.title-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.line-height {
+  line-height: 15px;
 }
 
 /*# sourceMappingURL=app.css.map */
