--- a/src/assets/sass/_WorkItemList.scss
+++ b/src/assets/sass/_WorkItemList.scss
@@ -1,6 +1,7 @@
+
 .list-card{
     // background-color: rgba(255, 255, 255, 0.753);
-    background-color: rgba(255, 255, 255, 0.5);
+
     width: 100%;
     margin: auto;
     display: grid;
@@ -12,24 +13,172 @@
     // text
     &_card{
         margin: auto;
-        margin-top: 10px;
+        // margin-top: 10px;
         display: flex;
         flex-direction: column;
-        width: 90%;
+        width: 85%;
         justify-content: center;
         align-items: center;
         justify-items: center;
-        border: 1px solid;
+        // border: 1px solid;   
+        border-radius: 10px;
+        background: #ffffff;
+        box-shadow:  2px 2px 2px rgba(0, 0, 0, 0.223),
+                     -2px -2px 3px rgba(0, 0, 0, 0.223);
     }
     &_description{
         width: 100%;
         word-wrap: break-word;
     }
     // img
+    &_img_container{
+        width: 100%;
+        // height: 8.1em;
+        // overflow: hidden;
+    }
+    &_container{
+        width: 90%;
+    }
     &_img{
-        shape-outside: circle(50%);
-        width: 100px;
-        height: 100px;
+        // shape-outside: circle(50%);
+        width: 100%;
+        height: auto;
+        // object-fit: cover;
         float: left;
     }
+    // Para que en mobile se vea mas pegado a los iconos, en resoluciones mayores, no va
+    &_technologies{
+        height: 1.5rem;
+    }
 }
+
+@media (min-width: 570px) {
+    .list-card{
+        grid-template-columns: repeat(2,1fr);
+        gap: 0.4em;
+        &_card{
+            width: 100%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            // shape-outside: circle(50%);
+            height: 25vh;
+            // object-fit: cover;
+            float: left;
+        }
+        &_technologies{
+            height: none;
+        }
+    }
+}
+@media (min-width: 600px) {
+    .list-card{
+        grid-template-columns: repeat(2,1fr);
+        &_card{
+            width: 90%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            height: 25vh;
+            // object-fit: cover;
+            float: left;
+        }
+        
+        &_technologies{
+            height: none;
+        }
+    }
+}
+
+@media (min-width: 671px) {
+    .list-card{
+        grid-template-columns: repeat(2,1fr);
+        &_card{
+            width: 100%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            // shape-outside: circle(50%);
+            height: 25vh;
+            float: left;
+        }
+        
+        &_technologies{
+            height: auto;
+        }
+    }
+}
+
+@media (min-width: 720px) {
+    .list-card{
+        grid-template-columns: repeat(3,1fr);
+        gap: 0.5rem;
+        &_card{
+            // width: 16.9rem;
+            width: 100%;
+            height: 100%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            // shape-outside: circle(50%);
+            height: 25vh;
+            float: left;
+        }
+        &_technologies{
+            height: auto;
+        }
+    }
+}
+
+@media (min-width: 900px) {
+    .list-card{
+        grid-template-columns: repeat(3,1fr);
+        gap: 0.5rem;
+        &_card{
+            // width: 16.9rem; 
+            height: 100%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            // shape-outside: circle(50%);
+            height: 25vh;
+            float: left;
+        }
+        &_technologies{
+            height: auto;
+        }
+    }
+}
+@media (min-width: 1000px) {
+    .list-card{
+        grid-template-columns: repeat(4,1fr);
+        gap: 0.5rem;
+        &_card{
+            // width: 16.9rem; 
+            height: 100%;
+        }
+        &_img_container{
+        width: 100%;
+        }
+        &_img{
+            // shape-outside: circle(50%);
+            height: 25vh;
+            float: left;
+        }
+        &_technologies{
+            height: auto;
+        }
+    }
+}
+
+
