--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -78,6 +78,18 @@ p {
   background-color: white;
 }
 
+.link{
+  text-decoration: none;
+}
+.link:hover{
+  width: 10em !important;
+  font-size: 2em;
+  box-shadow: inset 0 -10px 10px rgba(0, 0, 0, 0),
+  0 0  0 2px rgb(255,255,255),
+  1px 1px 10px rgba(0, 0, 0, 0.155);
+  transition: all 0.4s;
+}
+
 /* Animation */
 
 .parallax > use {
